--- a/projects/docker-compose.yml
+++ b/projects/docker-compose.yml
@@ -10,9 +10,11 @@ services:
       URL: ${URL}
       
   loadbalancer: 
-    image: nginx
+    build:
+      context: ./udagram-reverseproxy
+      dockerfile: Dockerfile
     volumes:
-    - ./udagram-reverseproxy/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./udagram-reverseproxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8181:80"
     command: [nginx-debug, '-g', 'daemon off;']
